tests/extensions/include/errors/variables.sieve
require "include";
require "variables";

keep;

# Global after command not being require or global
global "friep";

